deploy/kubernetes/kscore-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kscore-registry
  namespace: keystone-core
  labels:
    app.kubernetes.io/name: kscore-registry
    app.kubernetes.io/component: registry
    app.kubernetes.io/part-of: keystone-core
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: kscore-registry
